--- a/lang/ar.json
+++ b/lang/ar.json
@@ -18,7 +18,7 @@
   "Captions": "التعليقات",
   "captions off": "ايقاف التعليقات",
   "Chapters": "فصول",
-  "You aborted the video playback": "لقد ألغيت تشغيل الفيديو"
+  "You aborted the video playback": "لقد ألغيت تشغيل الفيديو",
   "A network error caused the video download to fail part-way.": "",
   "The video could not be loaded, either because the server or network failed or because the format is not supported.": "",
   "The video playback was aborted due to a corruption problem or because the video used features your browser did not support.": "",
