--- a/lang/bg.json
+++ b/lang/bg.json
@@ -4,23 +4,23 @@
   "Current Time": "Текущо време",
   "Duration Time": "Продължителност",
   "Remaining Time": "Оставащо време",
-  "Stream Type": "Тип на излъчването",
+  "Stream Type": "Тип на потока",
   "LIVE": "НА ЖИВО",
   "Loaded": "Заредено",
   "Progress": "Прогрес",
-  "Fullscreen": "Голям екран",
-  "Non-Fullscreen": "Спиране на голям екран",
+  "Fullscreen": "Цял екран",
+  "Non-Fullscreen": "Спиране на цял екран",
   "Mute": "Без звук",
   "Unmuted": "Със звук",
   "Playback Rate": "Скорост на възпроизвеждане",
   "Subtitles": "Субтитри",
-  "subtitles off": "Спри субтитрите",
-  "Captions": "Надписи за глухи",
-  "captions off": "Спри надписите за глухи",
+  "subtitles off": "Спряни субтитри",
+  "Captions": "Аудио надписи",
+  "captions off": "Спряни аудио надписи",
   "Chapters": "Глави",
   "You aborted the video playback": "Спряхте възпроизвеждането на видеото",
-  "A network error caused the video download to fail part-way.": "Грешка във мрежата провали свалянето на клипа.",
-  "The video could not be loaded, either because the server or network failed or because the format is not supported.": "Видеото не може да бъде заредено, заради проблем със сървъра или мрежата или защото този формат не е поддържан.",
-  "The video playback was aborted due to a corruption problem or because the video used features your browser did not support.": "Възпроизвеждането на видеото беше прекъснато заради проблем със файла или защото видеото използва опции който браузера ви не поддържа.",
+  "A network error caused the video download to fail part-way.": "Грешка в мрежата провали изтеглянето на видеото.",
+  "The video could not be loaded, either because the server or network failed or because the format is not supported.": "Видеото не може да бъде заредено заради проблем със сървъра или мрежата или защото този формат не е поддържан.",
+  "The video playback was aborted due to a corruption problem or because the video used features your browser did not support.": "Възпроизвеждането на видеото беше прекъснато заради проблем с файла или защото видеото използва опции които браузърът Ви не поддържа.",
   "No compatible source was found for this video.": "Не беше намерен съвместим източник за това видео."
 }
