--- a/lang/da.json
+++ b/lang/da.json
@@ -20,7 +20,7 @@
   "Chapters": "Kapitler",
   "You aborted the video playback": "Du afbrød videoafspilningen.",
   "A network error caused the video download to fail part-way.": "En netværksfejl fik download af videoen til at fejle.",
-  "The video could not be loaded, either because the server or network failed or because the format is not supported.": "Videoen kunne ikke indlæses, enten fordi serveren eller netværk fejlede, eller fordi formatet ikke er understøttet.",
+  "The video could not be loaded, either because the server or network failed or because the format is not supported.": "Videoen kunne ikke indlæses, enten fordi serveren eller netværket fejlede, eller fordi formatet ikke er understøttet.",
   "The video playback was aborted due to a corruption problem or because the video used features your browser did not support.": "Videoafspilningen blev afbrudt på grund af ødelagte data eller fordi videoen benyttede faciliteter som din browser ikke understøtter.",
   "No compatible source was found for this video.": "Fandt ikke en kompatibel kilde for denne video."
 }
