Legend in pt-Br is wrong.

--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -7,7 +7,7 @@
   "Stream Type": "Tipo de Stream",
   "LIVE": "AO VIVO",
   "Loaded": "Carregado",
-  "Progress": "Progressão",
+  "Progress": "Progresso",
   "Fullscreen": "Tela Cheia",
   "Non-Fullscreen": "Tela Normal",
   "Mute": "Mudo",
