--- a/lang/tr.json
+++ b/lang/tr.json
@@ -20,7 +20,7 @@
  "Chapters": "Bölümler",
  "You aborted the media playback": "Video oynatmayı iptal ettiniz",
  "A network error caused the media download to fail part-way.": "Video indirilirken bağlantı sorunu oluştu.",
- "The media could not be loaded, either because the server or network failed or because the format is not supported.": "Video oynatılamadı, Ağ yada sunucu hattası veya belirtilen format desteklenmiyor.",
+ "The media could not be loaded, either because the server or network failed or because the format is not supported.": "Video oynatılamadı, ağ ya da sunucu hatası veya belirtilen format desteklenmiyor.",
  "The media playback was aborted due to a corruption problem or because the media used features your browser did not support.": "Tarayıcınız desteklemediği için videoda hata oluştu.",
  "No compatible source was found for this media.": "Video için kaynak bulunamadı."
 }
